# ur_ws_sim

./: .gitignore  README.md
data/run_001/calib/: CameraParams_realsense.npz  handeye_realsense.npz  handeye_realsense.yaml  poses_realsense.csv  poses_realsense.npz  robot_poses.csv
data/run_001/results/: calib_report_realsense.md
src/hemi_motion_rs/: CMakeLists.txt  package.xml
src/hemi_motion_rs/launch/: hemi_motion_rs.launch.py
src/hemi_motion_rs/src/: hemi_motion_rs_node (copy).cpp  hemi_motion_rs_node backup.cpp  hemi_motion_rs_node.cpp
src/my_ur10e_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/my_ur10e_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ompl_planning.yaml  planning_pipelines.yaml  ros2_controllers.yaml  trajectory_execution.yaml  ur10e_scene.ros2_control.xacro  ur10e_scene.srdf  ur10e_scene.urdf.xacro
src/my_ur10e_moveit_config/launch/: custom.launch.py  custom_rs.launch (copy).py  custom_rs.launch.py  demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  real_robot_scene_moveit.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/my_ur10e_scene_description/: CMakeLists.txt  package.xml
src/my_ur10e_scene_description/launch/: scene.launch.py  scene_real.launch.py
src/my_ur10e_scene_description/meshes/: chessboard.dae
src/my_ur10e_scene_description/urdf/: ur10e_scene.xacro
src/robot_motion/: package.xml  setup.py
src/robot_motion/robot_motion/: hemi_motion_node.py
src/robot_motion_moveit/: CMakeLists.txt  package.xml
src/robot_motion_moveit/src/: hemi_motion_moveit (copy).cpp  hemi_motion_moveit.cpp
tools/realsense_calib/: camera_calibration backup.py  camera_calibration working1.py  camera_calibration.py  camera_pose_estimation_PnP backup.py  camera_pose_estimation_PnP.py  camera_pose_estimation_PnP_v2.py  hand_eye_calibration backup.py  hand_eye_calibration second backup.py  hand_eye_calibration.py  helper_functions.py  make_calibration_report _prefinal.py  make_calibration_report best so far.py  make_calibration_report.py  multi_handeye.py  multi_handeye_optimize.py  stats_LM_REAL.py
